docs/epas/9.5/02_epas_compat_ora_dev_guide/009_open_client_library.mdx
---
title: Open Client Library
---


The Open Client Library provides application interoperability with the Oracle Call Interface – an application that was formerly “locked in” can now work with either an EDB Postgres Advanced Server or an Oracle database with minimal to no changes to the application code. The EnterpriseDB implementation of the Open Client Library is written in C.

Please note: EnterpriseDB does not support use of the Open Client Library with Oracle Real Application Clusters (RAC) and Oracle Exadata; the aforementioned Oracle products have not been evaluated nor certified with this EnterpriseDB product.

## Comparison with Oracle Call Interface

The following diagram compares the Open Client Library and Oracle Call Interface application stacks.

Figure 6 Open Client Library

## Compiling and Linking a Program

The EnterpriseDB Open Client Library allows applications written using the Oracle Call Interface API to connect to and access an EnterpriseDB database with minimal changes to the C source code. The EnterpriseDB Open Client Library files are named:

> On Linux:
>
> libedboci.so
>
> On Windows:
>
> edboci.dll

The files are installed in the connectors/edb-oci/lib subdirectory.

***Compiling and Linking a Sample Program***

The following example compiles and links the sample program edb\_demo.c in a Linux environment. The edb\_demo.c is located in the connectors/edb-oci/samples subdirectory.

1.  Set the ORACLE\_HOME and EDB\_HOME environment variables.

> Set ORACLE\_HOME to the complete pathname of the Oracle home directory.
>
> For example:
>
> export ORACLE\_HOME=/usr/lib/oracle/xe/app/oracle/product/10.2.0/server
>
> Set EDB\_HOME to the complete pathname of the home directory.
>
> For example:
>
> export EDB\_HOME=/opt/PostgresPlus

2.  Set LD\_LIBRARY\_PATH to the complete path of libpthread.so. By default, libpthread.so is located in /usr/lib.

> export LD\_LIBRARY\_PATH=/usr/lib:$LD\_LIBRARY\_PATH

3.  Set LD\_LIBRARY\_PATH to include the Advanced Server Open Client library. By default, libiconv.so.2 is located in $EDB\_HOME/connectors/edb-oci/lib.

> export
> LD\_LIBRARY\_PATH=$EDB\_HOME/connectors/edb‑oci:$EDB\_HOME/
> connectors/edb-oci/lib:$LD\_LIBRARY\_PATH

4.  Then, compile and link the OCI API program.

> cd $EDB\_HOME/connectors/edb-oci/samples
>
> make

## Ref Cursor Support

The Advanced Server Open Client Library supports the use of REF CURSOR's as OUT parameters in PL/SQL procedures that are compatible with Oracle. Support is provided through the following API's:
 - OCIBindByName
 - OCIBindByPos
 - OCIBindDynamic
 - OCIStmtPrepare
 - OCIStmtExecute
 - OCIStmtFetch
 - OCIAttrGet

OCL also supports the SQLT\_RSET data type.

The following example demonstrates how to invoke a stored procedure that opens a cursor and returns a REF CURSOR as an output parameter. The code sample assumes that a PL/SQL procedure named openCursor (with an OUT parameter of type REF CURSOR) has been created on the database server, and that the required handles have been allocated:

char \* openCursor =
"begin \\
openCursor(:cmdRefCursor); \\
end;";
OCIStmt \*stmtOpenRefCursor;
OCIStmt \*stmtUseRefCursor;

Allocate handles for executing a stored procedure to open and use the REF CURSOR:

/\* Handle for the stored procedure to open the ref cursor \*/
OCIHandleAlloc((dvoid \*) envhp,
(dvoid \*\*) \&stmtOpenRefCursor,
OCI\_HTYPE\_STMT,
0,
(dvoid \*\*) NULL));

/\* Handle for using the Ref Cursor \*/
OCIHandleAlloc((dvoid \*) envhp,
(dvoid \*\*) \&stmtUseRefCursor,
OCI\_HTYPE\_STMT,
0,
(dvoid \*\*) NULL));

Then, prepare the PL/SQL block that is used to open the REF CURSOR:

OCIStmtPrepare(stmtOpenRefCursor,
errhp,
(text \*) openCursor,
(ub4) strlen(openCursor),
OCI\_NTV\_SYNTAX,
OCI\_DEFAULT));

Bind the PL/SQL openCursor OUT parameter:

OCIBindByPos(stmtOpenRefCursor,
\&bndplrc1,
errhp,
1,
(dvoid\*) \&stmtUseRefCursor,
/\* the returned ref cursor \*/
0,
SQLT\_RSET,
/\* SQLT\_RSET type representing cursor \*/
(dvoid \*) 0,
(ub2 \*) 0,
(ub2) 0,
(ub4) 0,
(ub4 \*) 0,
OCI\_DEFAULT));

Use the stmtOpenRefCursor statement handle to call the openCursor procedure:

OCIStmtExecute(svchp,
stmtOpenRefCursor,
errhp,
1,
0,
0,
0,
OCI\_DEFAULT);

At this point, the stmtUseRefCursor statement handle contains the reference to the cursor. To obtain the information, define output variables for the ref cursor:

/\* Define the output variables for the ref cursor \*/
OCIDefineByPos(stmtUseRefCursor,
\&defnEmpNo,
errhp,
(ub4) 1,
(dvoid \*) \&empNo,
(sb4) sizeof(empNo),
SQLT\_INT,
(dvoid \*) 0,
(ub2 \*)0,
(ub2 \*)0,
(ub4) OCI\_DEFAULT));

Then, fetch the first row of the result set into the target variables:

/\* Fetch the cursor data \*/
OCIStmtFetch(stmtUseRefCursor,
errhp,
(ub4) 1,
(ub4) OCI\_FETCH\_NEXT,
(ub4) OCI\_DEFAULT))

<span id="_EDB_ATTR_STMT_LVL_TX" class="anchor"></span>

## OCL Function Reference

The following tables list the functions supported in the Open Client Library. Note that any and all header files must be supplied by the user. Advanced Server does not supply any such files.

### Connect, Authorize and Initialize Functions

Table 9‑9‑1 Connect, Authorize, Terminate and Initialize Functions

|                   |                                                                                                                                          |
| ----------------- | ---------------------------------------------------------------------------------------------------------------------------------------- |
| Function          | Description                                                                                                                              |
| OCIBreak          | Aborts the specified OCI function.                                                                                                       |
| OCIEnvCreate      | Create an OCI environment.                                                                                                               |
| OCIEnvInit        | Initialize an OCI environment handle.                                                                                                    |
| OCIInitialize     | Initialize the OCI environment.                                                                                                          |
| OCILogoff         | Release a session.                                                                                                                       |
| OCILogon          | Create a logon connection.                                                                                                               |
| OCILogon2         | Create a logon session in various modes.                                                                                                 |
| OCIReset          | Resets the current operation/protocol.                                                                                                   |
| OCIServerAttach   | Establish an access path to a data source. For information about using the tnsnames.ora file, see [Section 9.6](#_EDB_ATTR_STMT_LVL_TX). |
| OCIServerDetach   | Remove access to a data source.                                                                                                          |
| OCISessionBegin   | Create a user session.                                                                                                                   |
| OCISessionEnd     | End a user session.                                                                                                                      |
| OCISessionGet     | Get session from session pool.                                                                                                           |
| OCISessionRelease | Release a session.                                                                                                                       |
| OCITerminate      | Detach from shared memory subsystem.                                                                                                     |

#### Using the tnsnames.ora File

The OCIServerAttach method uses a connection descriptor specified in the dblink parameter of the tnsnames.ora file. Use the tnsnames.ora file, compatible with Oracle databases, to specify database connection addresses. Advanced Server searches the user's home directory for a file named tnsnames.ora. If Advanced Server doesn't find the tnsnames.ora file in the user's home directory, it searches the path specified by TNS\_ADMIN.

The sample tnsnames.ora file contains:

EDBX =
(DESCRIPTION =
(ADDRESS = (PROTOCOL = TCP)(HOST = localhost)(PORT = 5444))
(CONNECT\_DATA = (SERVER = DEDICATED)(SID = edb))
)

Any parameters not included in the sample, are ignored by the Open Client Library. In the sample, SID refers to the database named edb, in the cluster running on server 'localhost' at port 5444.

A C program call to OCIServerAttach that uses the tnsnames.ora file will look like:

static text \*username = (text \*) "enterprisedb";
static text \*password = (text \*) "edb";
static text \*attach\_str = "EDBX";
OCIServerAttach( srvhp, errhp, attach\_str, strlen(attach\_str), 0);

If you don't have a tnsnames.ora file, supply the connection string parameter in the form //localhost:5444/edbx.

### Handle and Descriptor Functions

Table 9‑1 Handle and Descriptor Functions

|                    |                                                                                                                                                                                                                                                                                                          |
| ------------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| Function           | Description                                                                                                                                                                                                                                                                                              |
| OCIAttrGet         | Get handle attributes. Advanced server supports the following handle attributes: OCI\_ATTR\_USERNAME, OCI\_ATTR\_PASSWORD, OCI\_ATTR\_SERVER, OCI\_ATTR\_ENV, OCI\_ATTR\_SESSION, OCI\_ATTR\_ROW\_COUNT, OCI\_ATTR\_CHARSET\_FORM, OCI\_ATTR\_CHARSET\_ID, EDB\_ATTR\_STMT\_LEVEL\_TX, OCI\_ATTR\_MODULE |
| OCIAttrSet         | Set handle attributes. Advanced server supports the following handle attributes: OCI\_ATTR\_USERNAME, OCI\_ATTR\_PASSWORD, OCI\_ATTR\_SERVER, OCI\_ATTR\_ENV, OCI\_ATTR\_SESSION, OCI\_ATTR\_ROW\_COUNT, OCI\_ATTR\_CHARSET\_FORM, OCI\_ATTR\_CHARSET\_ID, EDB\_ATTR\_STMT\_LEVEL\_TX, OCI\_ATTR\_MODULE |
| OCIDescriptorAlloc | Allocate and initialize a descriptor.                                                                                                                                                                                                                                                                    |
| OCIDescriptorFree  | Free an allocated descriptor.                                                                                                                                                                                                                                                                            |
| OCIHandleAlloc     | Allocate and initialize a handle.                                                                                                                                                                                                                                                                        |
| OCIHandleFree      | Free an allocated handle.                                                                                                                                                                                                                                                                                |
| OCIParamGet        | Get a parameter descriptor.                                                                                                                                                                                                                                                                              |
| OCIParamSet        | Set a parameter descriptor.                                                                                                                                                                                                                                                                              |

#### EDB\_ATTR\_EMPTY\_STRINGS

By default, Advanced Server will treat an empty string as a NULL value. You can use the EDB\_ATTR\_EMPTY\_STRINGS environment attribute to control the behavior of the OCL when mapping empty strings. To modify the mapping behavior, use the OCIAttrSet() function to set EDB\_ATTR\_EMPTY\_STRINGS to one of the following:

| Value                      | Description                                       |
| -------------------------- | ------------------------------------------------- |
| OCI\_DEFAULT               | Treat an empty string as a NULL value.            |
| EDB\_EMPTY\_STRINGS\_NULL  | Treat an empty string as a NULL value.            |
| EDB\_EMPTY\_STRINGS\_EMPTY | Treat an empty string as a string of zero length. |

To find the value of EDB\_ATTR\_EMPTY\_STRINGS, query OCIAttrGet().

#### EDB\_ATTR\_HOLDABLE

Advanced Server supports statements that execute as WITH HOLD cursors. The EDB\_ATTR\_HOLDABLE attribute specifies which statements execute as WITH HOLD cursors. The EDB\_ATTR\_HOLDABLE attribute can be set to any of the following three values:
 - EDB\_WITH\_HOLD - execute as a WITH HOLD cursor
 - EDB\_WITHOUT\_HOLD - execute using a protocol-level prepared statement
 - OCI\_DEFAULT - see the definition that follows

You can set the attribute in an OCIStmt handle or an OCIServer handle. When you create an OCIServer handle or an OCIStmt handle, the EDB\_ATTR\_HOLDABLE attribute for that handle is set to OCI\_DEFAULT.

You can change the EDB\_ATTR\_HOLDABLE attribute for a handle by calling OCIAttrSet() and retrieve the attribute by calling OCIAttrGet().

When Advanced Server executes a SELECT statement, it examines the EDB\_ATTR\_HOLDABLE attribute in the OCIServer handle. If that attribute is set to EDB\_WITH\_HOLD, the query is executed as a WITH HOLD cursor.

If the EDB\_ATTR\_HOLDABLE attribute in the OCIServer handle is set to EDB\_WITHOUT\_HOLD, the query is executed as a normal prepared statement.

If the EDB\_ATTR\_HOLDABLE attribute in the OCIServer handle is set to OCI\_DEFAULT, Advanced Server uses the value of the EDB\_ATTR\_HOLDABLE attribute in the OCIServer handle (if the EDB\_ATTR\_HOLDABLE attribute in the OCIServer is set to EDB\_WITH\_HOLD, the query executes as a WITH HOLD cursor, otherwise, the query executes as a protocol-prepared statement).

#### EDB\_ATTR\_STMT\_LVL\_TX

Unless otherwise instructed, the OCL library will ROLLBACK the current transaction whenever the server reports an error. If you choose, you can override the automatic ROLLBACK with the edb\_stmt\_level\_tx parameter, which preserves modifications within a transaction, even if one (or several) statements raise an error within the transaction. For more information about edb\_stmt\_level\_tx, see [Section 1.3.4](#edb_stmt_level_tx).

You can use the OCIServer attribute with OCIAttrSet() and OCIAttrGet()to enable or disable EDB\_ATTR\_STMT\_LEVEL\_TX. By default, edb\_stmt\_level\_tx is disabled. To enable edb\_stmt\_level\_tx, the client application must call OCIAttrSet():

OCIServer \*server = myServer;
ub1 enabled = 1;

OCIAttrSet(server, OCI\_HTYPE\_SERVER, \&enabled,
sizeof(enabled), EDB\_ATTR\_STMT\_LEVEL\_TX, err);

To disable edb\_stmt\_level\_tx:

OCIServer \*server = myServer;
ub1 enabled = 0;

OCIAttrSet(server, OCI\_HTYPE\_SERVER, \&enabled,
sizeof(enabled), EDB\_ATTR\_STMT\_LEVEL\_TX, err);

### Bind, Define and Describe Functions

Table 9‑2 Bind, Define, and Describe Functions

|                         |                                                   |
| ----------------------- | ------------------------------------------------- |
| Function                | Description                                       |
| OCIBindByName           | Bind by name.                                     |
| OCIBindByPos            | Bind by position.                                 |
| OCIBindDynamic          | Set additional attributes after bind.             |
| OCIBindArrayOfStruct    | Bind an array of structures for bulk operations.  |
| OCIDefineArrayOfStruct  | Specify the attributes of an array.               |
| OCIDefineByPos          | Define an output variable association.            |
| OCIDefineDynamic        | Set additional attributes for define.             |
| OCIDescribeAny          | Describe existing schema objects.                 |
| OCIStmtGetBindInfo      | Get bind and indicator variable names and handle. |
| OCIUserCallbackRegister | Define a user-defined callback.                   |

### Statement Functions

Table 9‑3 Statement Functions

|                 |                                   |
| --------------- | --------------------------------- |
| Function        | Description                       |
| OCIStmtExecute  | Execute a prepared SQL statement. |
| OCIStmtFetch    | Fetch rows of data (deprecated).  |
| OCIStmtFetch2   | Fetch rows of data.               |
| OCIStmtPrepare  | Prepare a SQL statement.          |
| OCIStmtPrepare2 | Prepare a SQL statement.          |
| OCIStmtRelease  | Release a statement handle.       |

### Transaction Functions

Table 9‑4 Transaction Functions

|                  |                          |
| ---------------- | ------------------------ |
| Function         | Description              |
| OCITransCommit   | Commit a transaction.    |
| OCITransRollback | Roll back a transaction. |

### XA Functions

Table 9‑5 XA Functions

|           |                                 |
| --------- | ------------------------------- |
| Function  | Description                     |
| xaoEnv    | Returns OCL environment handle. |
| xaoSvcCtx | Returns OCL service context.    |

#### xaoSvcCtx

In order to use the xaoSvcCtx function, extensions in the xaoSvcCtx or xa\_open connection string format must be provided as follows:

Oracle\_XA{+*required\_fields* ...}

Where *required\_fields* are the following:

HostName=*host\_ip\_address* specifies the IP address of the Advanced Server database.

PortNumber=*host\_port\_number* specifies the port number on which Advanced Server is running.

SqlNet=*dbname* specifies the database name.

Acc=P/*username*/*password* specifies the database username and password. *password* may be omitted in which case the field is specified as Acc=P/username/.

AppName=*app\_id* specifies a number that identifies the application.

The following is an example of the connection string:

Oracle\_XA+HostName=192.168.1.1+PortNumber=1533+SqlNet=XE+Acc=P/user/password+AppName=1234

### Date and Datetime Functions

Table 9‑6 Date and Datetime Functions

|                              |                                                                                                                   |
| ---------------------------- | ----------------------------------------------------------------------------------------------------------------- |
| Function                     | Description                                                                                                       |
| OCIDateAddDays               | Add or subtract a number of days.                                                                                 |
| OCIDateAddMonths             | Add or subtract a number of months.                                                                               |
| OCIDateAssign                | Assign a date.                                                                                                    |
| OCIDateCheck                 | Check if the given date is valid.                                                                                 |
| OCIDateCompare               | Compare two dates.                                                                                                |
| OCIDateDaysBetween           | Find the number of days between two dates.                                                                        |
| OCIDateFromText              | Convert a string to a date.                                                                                       |
| OCIDateGetDate               | Get the date portion of a date.                                                                                   |
| OCIDateGetTime               | Get the time portion of a date.                                                                                   |
| OCIDateLastDay               | Get the date of the last day of the month.                                                                        |
| OCIDateNextDay               | Get the date of the next day.                                                                                     |
| OCIDateSetDate               | Set the date portion of a date.                                                                                   |
| OCIDateSetTime               | Set the time portion of a date.                                                                                   |
| OCIDateSysDate               | Get the current system date and time.                                                                             |
| OCIDateToText                | Convert a date to a string.                                                                                       |
| OCIDateTimeAssign            | Perform datetime assignment.                                                                                      |
| OCIDateTimeCheck             | Check if the date is valid.                                                                                       |
| OCIDateTimeCompare           | Compare two datetime values.                                                                                      |
| OCIDateTimeConstruct         | Construct a datetime descriptor.                                                                                  |
| OCIDateTimeConvert           | Convert one datetime type to another.                                                                             |
| OCIDateTimeFromArray         | Convert an array of size OCI\_DT\_ARRAYLEN to an OCIDateTime descriptor.                                          |
| OCIDateTimeFromText          | Convert the given string to Oracle datetime type in the OCIDateTime descriptor according to the specified format. |
| OCIDateTimeGetDate           | Get the date portion of a datetime value.                                                                         |
| OCIDateTimeGetTime           | Get the time portion of a datetime value.                                                                         |
| OCIDateTimeGetTimeZoneName   | Get the time zone name portion of a datetime value.                                                               |
| OCIDateTimeGetTimeZoneOffset | Get the time zone (hour, minute) portion of a datetime value.                                                     |
| OCIDateTimeSubtract          | Take two datetime values as input and return their difference as an interval.                                     |
| OCIDateTimeSysTimeStamp      | Get the system current date and time as a timestamp with time zone.                                               |
| OCIDateTimeToArray           | Convert an OCIDateTime descriptor to an array.                                                                    |
| OCIDateTimeToText            | Convert the given date to a string according to the specified format.                                             |

### Interval Functions

Table 9‑7 Interval Functions

|                         |                                                                                              |
| ----------------------- | -------------------------------------------------------------------------------------------- |
| Function                | Description                                                                                  |
| OCIIntervalAdd          | Adds two interval values.                                                                    |
| OCIIntervalAssign       | Copies one interval value into another interval value.                                       |
| OCIIntervalCompare      | Compares two interval values.                                                                |
| OCIIntervalGetDaySecond | Extracts days, hours, minutes, seconds and fractional seconds from an interval.              |
| OCIIntervalSetDaySecond | Modifies days, hours, minutes, seconds and fractional seconds in an interval.                |
| OCIIntervalGetYearMonth | Extracts year and month values from an interval.                                             |
| OCIIntervalSetYearMonth | Modifies year and month values in an interval.                                               |
| OCIIntervalDivide       | Implements division of OCIInterval values by OCINumber values.                               |
| OCIIntervalMultiply     | Implements multiplication of OCIInterval values by OCINumber values.                         |
| OCIIntervalSubtract     | Subtracts one interval value from another interval value.                                    |
| OCIIntervalToText       | Extrapolates a character string from an interval.                                            |
| OCIIntervalCheck        | Verifies the validity of an interval value.                                                  |
| OCIIntervalToNumber     | Converts an OCIInterval value into a OCINumber value.                                        |
| OCIIntervalFromNumber   | Converts a OCINumber value into an OCIInterval value.                                        |
| OCIDateTimeIntervalAdd  | Adds an OCIInterval value to an OCIDatetime value, resulting in an OCIDatetime value.        |
| OCIDateTimeIntervalSub  | Subtracts an OCIInterval value from an OCIDatetime value, resulting in an OCIDatetime value. |
| OCIIntervalFromText     | Converts a text string into an interval.                                                     |
| OCIIntervalFromTZ       | Converts a time zone specification into an interval value.                                   |

### Number Functions

Table 9‑8 Number Functions

|                      |                                                              |
| -------------------- | ------------------------------------------------------------ |
| Function             | Description                                                  |
| OCINumberAbs         | Compute the absolute value.                                  |
| OCINumberAdd         | Adds NUMBERs.                                                |
| OCINumberArcCos      | Compute the arc cosine.                                      |
| OCINumberArcSin      | Compute the arc sine.                                        |
| OCINumberArcTan      | Compute the arc tangent.                                     |
| OCINumberArcTan2     | Compute the arc tangent of two NUMBERs.                      |
| OCINumberAssign      | Assign one NUMBER to another.                                |
| OCINumberCeil        | Compute the ceiling of NUMBER.                               |
| OCINumberCmp         | Compare NUMBERs.                                             |
| OCINumberCos         | Compute the cosine.                                          |
| OCINumberDec         | Decrement a NUMBER.                                          |
| OCINumberDiv         | Divide two NUMBERs.                                          |
| OCINumberExp         | Raise e to the specified NUMBER power.                       |
| OCINumberFloor       | Compute the floor of a NUMBER.                               |
| OCINumberFromInt     | Convert an integer to an Oracle NUMBER.                      |
| OCINumberFromReal    | Convert a real to an Oracle NUMBER.                          |
| OCINumberFromText    | Convert a string to an Oracle NUMBER.                        |
| OCINumberHypCos      | Compute the hyperbolic cosine.                               |
| OCINumberHypSin      | Compute the hyperbolic sine.                                 |
| OCINumberHypTan      | Compute the hyperbolic tangent.                              |
| OCINumberInc         | Increments a NUMBER.                                         |
| OCINumberIntPower    | Raise a given base to an integer power.                      |
| OCINumberIsInt       | Test if a NUMBER is an integer.                              |
| OCINumberIsZero      | Test if a NUMBER is zero.                                    |
| OCINumberLn          | Compute the natural logarithm.                               |
| OCINumberLog         | Compute the logarithm to an arbitrary base.                  |
| OCINumberMod         | Modulo division.                                             |
| OCINumberMul         | Multiply NUMBERs.                                            |
| OCINumberNeg         | Negate a NUMBER.                                             |
| OCINumberPower       | Exponentiation to base e.                                    |
| OCINumberPrec        | Round a NUMBER to a specified number of decimal places.      |
| OCINumberRound       | Round a NUMBER to a specified decimal place.                 |
| OCINumberSetPi       | Initialize a NUMBER to Pi.                                   |
| OCINumberSetZero     | Initialize a NUMBER to zero.                                 |
| OCINumberShift       | Multiply by 10, shifting specified number of decimal places. |
| OCINumberSign        | Obtain the sign of a NUMBER.                                 |
| OCINumberSin         | Compute the sine.                                            |
| OCINumberSqrt        | Compute the square root of a NUMBER.                         |
| OCINumberSub         | Subtract NUMBERs.                                            |
| OCINumberTan         | Compute the tangent.                                         |
| OCINumberToInt       | Convert a NUMBER to an integer.                              |
| OCINumberToReal      | Convert a NUMBER to a real.                                  |
| OCINumberToRealArray | Convert an array of NUMBER to a real array.                  |
| OCINumberToText      | Converts a NUMBER to a string.                               |
| OCINumberTrunc       | Truncate a NUMBER at a specified decimal place.              |

### String Functions

Table 9‑9 String Functions

|                     |                                               |
| ------------------- | --------------------------------------------- |
| Function            | Description                                   |
| OCIStringAllocSize  | Get allocated size of string memory in bytes. |
| OCIStringAssign     | Assign string to a string.                    |
| OCIStringAssignText | Assign text string to a string.               |
| OCIStringPtr        | Get string pointer.                           |
| OCIStringResize     | Resize string memory.                         |
| OCIStringSize       | Get string size.                              |

### Cartridge Services and File I/O Interface Functions

Table 9‑10 Cartridge Services and File I/O Interface Functions

|                  |                                        |
| ---------------- | -------------------------------------- |
| Function         | Description                            |
| OCIFileClose     | Close an open file.                    |
| OCIFileExists    | Test to see if the file exists.        |
| OCIFileFlush     | Write buffered data to a file.         |
| OCIFileGetLength | Get the length of a file.              |
| OCIFileInit      | Initialize the OCIFile package.        |
| OCIFileOpen      | Open a file.                           |
| OCIFileRead      | Read from a file into a buffer.        |
| OCIFileSeek      | Change the current position in a file. |
| OCIFileTerm      | Terminate the OCIFile package.         |
| OCIFileWrite     | Write buflen bytes into the file.      |

### LOB Functions

Table 9‑11 LOB Functions

|                   |                                                    |
| ----------------- | -------------------------------------------------- |
| Function          | Description                                        |
| OCILobRead        | Returns a LOB value (or a portion of a LOB value). |
| OCILOBWriteAppend | Adds data to a LOB value.                          |
| OCILobGetLength   | Returns the length of a LOB value.                 |
| OCILobTrim        | Trims data from the end of a LOB value.            |
| OCILobOpen        | Opens a LOB value for use by other LOB functions.  |
| OCILobClose       | Closes a LOB value.                                |

### Miscellaneous Functions

Table 9‑12 Miscellaneous Functions

<table>
<tbody>
<tr class="odd">
<td>Function</td>
<td>Description</td>
</tr>
<tr class="even">
<td>OCIClientVersion</td>
<td>Return client library version.</td>
</tr>
<tr class="odd">
<td>OCIErrorGet</td>
<td>Return error message.</td>
</tr>
<tr class="even">
<td>OCIPGErrorGet</td>
<td><p>Return native error messages reported by libpq or the server. The signature is:</p>
<p>sword OCIPGErrorGet(dvoid *hndlp, ub4 recordno, OraText *errcodep,ub4 errbufsiz, OraText *bufp, ub4 bufsiz, ub4 type)</p></td>
</tr>
<tr class="odd">
<td>OCIPasswordChange</td>
<td>Change password.</td>
</tr>
<tr class="even">
<td>OCIPing</td>
<td>Confirm that the connection and server are active.</td>
</tr>
<tr class="odd">
<td>OCIServerVersion</td>
<td>Get the Oracle version string.</td>
</tr>
</tbody>
</table>

### Supported Data Types

Table 9‑13 Supported Data Types

| Function             | Description                       |
| -------------------- | --------------------------------- |
| ANSI\_DATE           | ANSI date                         |
| SQLT\_AFC            | ANSI fixed character              |
| SQLT\_AVC            | ANSI variable character           |
| SQLT\_BDOUBLE        | Binary double                     |
| SQLT\_BIN            | Binary data                       |
| SQLT\_BFLOAT         | Binary float                      |
| SQLT\_CHR            | Character string                  |
| SQLT\_DAT            | Oracle date                       |
| SQLT\_DATE           | ANSI date                         |
| SQLT\_FLT            | Float                             |
| SQLT\_INT            | Integer                           |
| SQLT\_LBI            | Long binary                       |
| SQLT\_LNG            | Long                              |
| SQLT\_LVB            | Longer long binary                |
| SQLT\_LVC            | Longer longs (character)          |
| SQLT\_NUM            | Oracle numeric                    |
| SQLT\_ODT            | OCI date type                     |
| SQLT\_STR            | Zero-terminated string            |
| SQLT\_TIMESTAMP      | Timestamp                         |
| SQLT\_TIMESTAMP\_TZ  | Timestamp with time zone          |
| SQLT\_TIMESTAMP\_LTZ | Timestamp with local time zone    |
| SQLT\_UIN            | Unsigned integer                  |
| SQLT\_VBI            | VCS format binary                 |
| SQLT\_VCS            | Variable character                |
| SQLT\_VNU            | Number with preceding length byte |
| SQLT\_VST            | OCI string type                   |

